onboarding-container: add header

--- a/packages/pilot/public/locales/pt/translations.json
+++ b/packages/pilot/public/locales/pt/translations.json
@@ -608,7 +608,8 @@
   },
   "pages": {
     "onboarding": {
-      "skip": "Pular introdução"
+      "skip": "Pular introdução",
+      "welcome": "Boas-vindas, {{userName}}!"
     },
     "recipient_detail": {
       "anticipation": "Antecipação",
