onboarding-container: add dropdown options

--- a/packages/pilot/public/locales/pt/translations.json
+++ b/packages/pilot/public/locales/pt/translations.json
@@ -608,6 +608,8 @@
   },
   "pages": {
     "onboarding": {
+      "advance_step": "Avançar",
+      "last_step": "Finalizar",
       "skip": "Pular introdução",
       "welcome": "Boas-vindas, {{userName}}!"
     },
